# vscode-bazel

./: .bazelrc  .dockerignore  .eslintrc.js  .gitignore  .prettierignore  .travis.yml  .vscode-test.js  .vscodeignore  BUILD  BUILD_ICON_README.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEVELOPER.md  DIRECTORY_FILTERING_GUIDE.md  Dockerfile  MODULE.bazel  README.md  RELEASE.md  TODO.md  WORKSPACE  bazel_protos.bzl  docker-compose.debug.yml  docker-compose.yml  esbuild-debug-adapter.js  esbuild.js  eslint.config.js  external-tools-config.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.json  tslint.json
.bazelci/: presubmit.yml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/actions/download-external-tools/: action.yml
.github/scripts/: enforce-conventional-commit-message.sh  enforce-conventional-commit-messages.sh
.github/workflows/: build-release.yml  build.yml  client_vscode.yml  deploy.yml  release-please.yml  server.yml
client/: .gitignore  DockerFile  Dockerfile  package-lock.json  package.json  tsconfig.json
client/.devcontainer/: devcontainer.json
client/icons/: MaterialIcons.license
client/scripts/: build.sh
client/src/: extension.ts
client/src/buildifier/: buildifier.ts  (+1 more)
client_vscode/: .dockerignore  .gitignore  BUILD  CHANGELOG.md  Dockerfile  README.md  package.json  tslint.json
client_vscode/scripts/: build.sh  update_protos.sh
client_vscode/syntaxes/: starlark.tmLanguage.json
docs/: deployment.md  how_to_setup_and_run_server_junit_tests.md  project_structure.md
examples/: .gitignore  README.md
examples/cpp_external_dependencies/: README.md
examples/cpp_hello_world/: README.md
examples/cpp_hello_world_02/: README.md
examples/cpp_lots_o_files/: README.md
examples/cpp_todo_app/: README.md
foo/: BUILD
icons/: bazel-build-icon-theme.json
plan/: plan.md  prd.md
plan-bazel-build-button/: plan.md
plan-bazel-build-button/specs/: SPECS.md
plan/specs/: SPECS.md
scripts/: build.sh  create_client_dev_env.sh  download-tools-for-ci.ts  env_builder.sh  package.sh  prepare.js  prepare.sh  proto_sync.sh  test.sh  try-extension.js  update_protos.sh
server/: .classpath  .gitignore  .project  BUILD  Dockerfile  WORKSPACE  _old_BUILD  build.gradle  gradle.properties
src/: assert.ts
src/bazel/: bazel_availability.ts  bazel_build.ts  bazel_build_icon.ts  bazel_build_icon_adapter.ts  bazel_build_icon_config.ts  bazel_build_icon_service.ts  bazel_child_process_command.ts  bazel_command.ts  bazel_cquery.ts  bazel_exit_code.ts  bazel_info.ts  bazel_label.ts  bazel_query.ts  bazel_quickpick.ts  bazel_task_info.ts  bazel_terminal_command.ts  bazel_test.ts  bazel_utils.ts  bazel_workspace_info.ts  commands.ts  file_target_resolver.ts  index.ts  queried_rule.ts  queried_source_file.ts  query.ts  query_location.ts  query_result.ts  query_result_item.ts  tasks.ts  utils.ts
src/buildifier/: buildifier.ts  buildifier_availability.ts  buildifier_diagnostics_manager.ts  buildifier_downloader.ts  buildifier_feature.ts  buildifier_format_provider.ts  buildifier_warning.ts  index.ts
src/codelens/: bazel_build_code_lens_provider.ts  code_lens_builder.ts  code_lens_command_adapter.ts  code_lens_feature.ts  code_lens_provider.ts  index.ts  provider.ts
src/completion-provider/: bazel_completion_provider.ts  bazel_repository_completion_provider.ts  bazel_target_completion_provider.ts  index.ts
src/debug-adapter/: client.ts  connection.ts  handles.ts
src/definition/: bazel_goto_definition_provider.ts
src/extension/: bazel_wrapper_commands.ts  command_variables.ts  commands.ts  configuration.ts  extension.ts  extension_feature.ts  logger.ts  logger_interface.ts  resources.ts
src/external-tools/: config.ts  github.ts  github_api.ts  platform.ts  tool_config.ts  tool_downloader.ts  tool_manager.ts  types.ts  validate_tool_checksums.ts
src/language_support/: language-server-client.ts  language_support_feature.ts
src/logging/: index.ts  logging.ts
src/lsp/: language-server-client.ts
src/project-view/: bazel_project_view.ts  build_file_decorator.ts  build_icon_integration.ts  directory_filter.ts  directory_filter_service.ts  index.ts  project_view_dashboard.ts  project_view_manager.ts  project_view_service.ts  status_bar_manager.ts  target_resolver.ts  test_discovery.ts  test_explorer_provider.ts
src/protos/: README.md  index.ts
src/symbols/: bazel_build_symbol_provider.ts  bazel_target_reference_provider.ts  bazel_target_symbol_provider.ts  index.ts
src/test/: bazel_build_icon.test.ts  bazel_build_icon_config.test.ts  file_target_resolver.test.ts  runIntegrationTests.ts
src/test-explorer/: index.ts  lcov_parser.ts
src/workspace-tree/: bazel_package_tree_item.ts  bazel_target_tree_item.ts  bazel_tree_item.ts  bazel_workspace_folder_tree_item.ts  bazel_workspace_tree_provider.ts  icons.ts  index.ts  querier.ts  workspace-tree.ts  workspace_tree_feature.ts  workspace_tree_provider.ts
syntaxes/: .gitignore  bazelrc.configuration.json  bazelrc.tmLanguage.json  bazelrc.tmLanguage.yaml  starlark.tmLanguage.json  starlark.tmLanguage.license
test/: BUILD  bazel_completion_provider.test.ts  bazel_project_view.test.ts  bazel_query.test.ts  bazel_quickpick.test.ts  bazel_utils.test.ts  buildifier.test.ts  buildifier_availability.test.ts  code_lens_builder.test.ts  code_lens_feature.test.ts  code_lens_provider.test.ts  completion.test.ts  configuration.test.ts  copy_label_to_clipboard.test.ts  example.bazelrc  example.bazelrc.snap  extension.test.ts  extension_feature.test.ts  external_tools_availability.test.ts  file_target_resolver.test.ts  go_to_build_file.test.ts  go_to_label.test.ts  goto_definition_provider.test.ts  jump_to_build_file.test.ts  jump_to_label.test.ts  lcov_parser.test.ts  logger.test.ts  multiple_target_picker.test.ts  resources.test.ts  tool_checksums_validator.test.ts  workspace-tree.test.ts  workspace_tree.test.ts
test/bazel_workspace/: .gitignore  MODULE.bazel
test/lcov/: README.md  cpp.lcov  go.lcov  java.lcov  rust.lcov
(+287 files in other folders)
