bazel_dep(name = "aspect_rules_ts", version = "3.4.0")

# local_path_override(module_name = "aspect_rules_ts", path = "/home/cameron/Repos/rules_ts")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")

bazel_dep(name = "aspect_rules_js", version = "2.1.3")

bazel_dep(name = "rules_nodejs", version = "6.3.3")
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "22.13.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
http_file(
    name = "bazel_tar",
    integrity = "sha256-1RkOrSf1u0LkcI0rr9R4NWU5VzYSlR+AiGMmW/9xBOQ=",
    downloaded_file_path = "bazel.tar",
    # strip_prefix = "bazel-8.0.1",
    urls = ["https://github.com/bazelbuild/bazel/archive/refs/tags/8.0.1.tar.gz"],
)

bazel_dep(name = "buildozer", version = "8.0.1")
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a")
